starting GUI update code
saving progress as I begin to bridge the gap between GUI and backend code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">P2Pchat</string>
+    <string name="discovered_devices">Discovered Devices</string>
 </resources>
