able to select a peer
the gui allows you to select a peer, and the code for connecting to said peer is present.
Next is sending messages between devices

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">P2Pchat</string>
     <string name="discovered_devices">Discovered Devices</string>
+    <string name="refresh">Refresh</string>
 </resources>
