--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="my_device_title">My Device:</string>
     <string name="placeholder">Placeholder Text</string>
+    <string name="previously_connected_devices">Previously Connected Devices</string>
+    <string name="unrecognized_devices">Unrecognized Devices</string>
 </resources>
