linked fragment to the singleton
still some steps missing, this is still a work in progress. Some modifications should be made to the main activity before this part of the application will work.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="unrecognized_devices">Unrecognized Devices</string>
     <string name="p2p_not_enabled_error">Wifi Direct/P2P connections are not enabled.
         Please enable them in settings.</string>
+    <string name="discover_peers">Discover Peers</string>
 </resources>
