added drawerLayout to main fragment
added a drawer to the main view that currently goes nowhere

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="p2p_not_enabled_error">Wifi Direct/P2P connections are not enabled.
         Please enable them in settings.</string>
     <string name="discover_peers">Discover Peers</string>
+    <string name="chat_history">Chat History</string>
+    <string name="settings">Settings</string>
+    <string name="help">Help</string>
 </resources>
