--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="chat_history">Chat History</string>
     <string name="settings">Settings</string>
     <string name="help">Help</string>
+    <string name="send">Send</string>
+    <string name="message_hint">Please Enter Your Message...</string>
+    <string name="attach_description">Attach Files or Photos</string>
+    <string name="file_name">file</string>
 </resources>
